# backend/api/gen/go/admin/service/v1/i_redis_cache_monitor_http.pb.go
@@ -1,0 +1,79 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             (unknown)
+// source: admin/service/v1/i_redis_cache_monitor.proto
+
+package adminpb
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+	v1 "go-wind-admin/api/gen/go/redis_cache/service/v1"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationRedisCacheMonitorServiceGet = "/admin.service.v1.RedisCacheMonitorService/Get"
+
+type RedisCacheMonitorServiceHTTPServer interface {
+	// Get 查询Redis缓存监控信息
+	Get(context.Context, *v1.GetRedisCacheMonitorRequest) (*v1.RedisCacheMonitorInfo, error)
+}
+
+func RegisterRedisCacheMonitorServiceHTTPServer(s *http.Server, srv RedisCacheMonitorServiceHTTPServer) {
+	r := s.Route("/")
+	r.GET("/admin/v1/redis-cache-monitor", _RedisCacheMonitorService_Get18_HTTP_Handler(srv))
+}
+
+func _RedisCacheMonitorService_Get18_HTTP_Handler(srv RedisCacheMonitorServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in v1.GetRedisCacheMonitorRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRedisCacheMonitorServiceGet)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Get(ctx, req.(*v1.GetRedisCacheMonitorRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*v1.RedisCacheMonitorInfo)
+		return ctx.Result(200, reply)
+	}
+}
+
+type RedisCacheMonitorServiceHTTPClient interface {
+	// Get 查询Redis缓存监控信息
+	Get(ctx context.Context, req *v1.GetRedisCacheMonitorRequest, opts ...http.CallOption) (rsp *v1.RedisCacheMonitorInfo, err error)
+}
+
+type RedisCacheMonitorServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewRedisCacheMonitorServiceHTTPClient(client *http.Client) RedisCacheMonitorServiceHTTPClient {
+	return &RedisCacheMonitorServiceHTTPClientImpl{client}
+}
+
+// Get 查询Redis缓存监控信息
+func (c *RedisCacheMonitorServiceHTTPClientImpl) Get(ctx context.Context, in *v1.GetRedisCacheMonitorRequest, opts ...http.CallOption) (*v1.RedisCacheMonitorInfo, error) {
+	var out v1.RedisCacheMonitorInfo
+	pattern := "/admin/v1/redis-cache-monitor"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationRedisCacheMonitorServiceGet))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
