# backend/app/admin/service/internal/server/rest_server.go
@@ -118,6 +118,7 @@ func NewRestServer(
 	apiAuditLogService *service.ApiAuditLogService,
 	operationAuditLogService *service.OperationAuditLogService,
 	dataAccessAuditLogService *service.DataAccessAuditLogService,
+	redisCacheMonitorService *service.RedisCacheMonitorService,
 
 	internalMessageService *service.InternalMessageService,
 	internalMessageCategoryService *service.InternalMessageCategoryService,
@@ -168,6 +169,7 @@ func NewRestServer(
 	adminV1.RegisterApiAuditLogServiceHTTPServer(srv, apiAuditLogService)
 	adminV1.RegisterOperationAuditLogServiceHTTPServer(srv, operationAuditLogService)
 	adminV1.RegisterDataAccessAuditLogServiceHTTPServer(srv, dataAccessAuditLogService)
+	adminV1.RegisterRedisCacheMonitorServiceHTTPServer(srv, redisCacheMonitorService)
 
 	adminV1.RegisterFileServiceHTTPServer(srv, fileService)
 
